# rag-chat

./: .env.template  .gitignore  Dockerfile  Dockerfile.dev  README.md  build-image.sh  docker-compose.yaml  requirements.txt
.devcontainer/: devcontainer.json
backend/: .gitignore  README.md  data_config.json  logging.conf  logging.yaml  pyproject.toml  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/app/: __init__.py  app.py  app_dev.py  main.py  main_dev.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  api.py  chat.py  data.py  files.py  filters.py  frontend.py  legacy.py  model.py  payload.py  query.py  setting.py  tools.py  vercel.py
backend/app/api/services/: files.py  suggestion.py
backend/app/engine/: __init__.py  agents.py  caches.py  chatter.py  config.py  data_store.py  engines.py  events.py  extension.py  indexer.py  indexes.py  loaders.py  models.py  queryer.py  setting.py  stores.py  tools.py  utils.py  vector_db.py  vectordb.py
backend/app/routes/: api.py  fe_response.py  frontend.py  legacy.py  mock_response.py  vercel.py
backend/app/services/: suggestion.py
backend/engine/: __init__.py  agents.py  caches.py  chatter.py  common.py  config.py  data_store.py  engines.py  events.py  extension.py  indexer.py  models.py  prompts.py  queryer.py  vector_db.py
backend/web/: app.py  mock_data.py
backend/web/routes/: __init__.py  api.py  fe_response.py  legacy.py  mock_response.py  vercel.py
demo/: gemini.py
deployment/: .env.template
engine/: config.py  data_store.py  db_cleanup.py  db_show.py  indexer.py  queryer.py  vector_db.py
frontend/: .gitignore  README.md  next.config.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.devcontainer/: devcontainer.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(query)/: common.css  layout.tsx  query.css
frontend/app/components/: Markdown.css  Markdown.tsx  chat-section.tsx  header.tsx
frontend/app/context/: ConfigContext.tsx  chat-context.tsx  config-context.tsx
frontend/app/legacy/: App.tsx  client.tsx  page.tsx
frontend/app/lib/: backend.ts
frontend/app/query/: App.tsx  Home.tsx  page.tsx
frontend/app/setting/: Setting.tsx  (+1 more)
frontend/cache/: config.json
frontend/src/: App.js  App.tsx
rag-deploy/: .env.template  docker-compose.yaml
web/: app.py  server.py
(+68 files in other folders)
