[project]
name = "app"
version = "0.3.0"
description = "A RAG-based Chatbot"
authors = [
    {name="Jianshao"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index-core = "^0.14.2"
llama-index-readers-file = "^0.5.4"
llama-index-vector-stores-chroma = "^0.5.3"
llama-index-embeddings-google-genai = "^0.3.1"
llama-index-embeddings-ollama = "^0.8.3"
llama-index-embeddings-openai = "^0.5.1"
llama-index-llms-google-genai = "^0.5.0"
llama-index-llms-ollama = "^0.7.3"
llama-index-llms-openai = "^0.5.6"
llama-index-tools-mcp = "^0.4.3"
chromadb = "^1.1.0"
fastapi = "^0.117.1"
aiostream = "^0.7.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
